--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvContacts"
@@ -18,9 +18,13 @@
     <Button
         android:id="@+id/btnDelDuplicates"
         android:layout_width="300dp"
-        android:layout_gravity="center"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/btn_del_duplicates_text"
+        android:textColor="@color/black"
+        android:background="@drawable/bg_rectangle_border"
         android:enabled="false"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         />
 </LinearLayout>
