--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:orientation="vertical"
     android:padding="8dp">
 
+    <!-- Шапка с заголовком -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/head_activity_main"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:padding="16dp"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvContacts"
         android:layout_width="match_parent"
@@ -21,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/btn_del_duplicates_text"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:background="@drawable/bg_rectangle_border"
         android:enabled="false"
         android:layout_marginTop="16dp"
